# goldener-examples

./: README.md  mypy.ini  pyproject.toml
image_classification_cifar10/: README.md  cifar10_experiment.py  data.py  utils.py
image_classification_cifar10/config/: config.yaml
image_classification_cifar10/config/hydra/sweeper/params/: dup_0_02.yaml  dup_0_05.yaml  dup_0_1.yaml  half_no_dup.yaml
image_classification_cifar10/run/: cifar10_50_gold_resnet.sh  cifar10_50_random_resnet.sh  cifar10_90_gold_resnet_dup.sh  cifar10_90_random_resnet_dup.sh  cifar10_95_gold_resnet_dup.sh  cifar10_95_random_resnet_dup.sh  cifar10_98_gold_resnet_dup.sh  cifar10_98_random_resnet_dup.sh  cifar10_cnn.sh  cifar10_cnn_dup_0_05.sh  cifar10_cnn_dup_0_1.sh  cifar10_cnn_half_no_dup.sh  cifar10_resnet.sh  cifar10_resnet_dup_0_05.sh  cifar10_resnet_dup_0_1.sh  cifar10_vit.sh  cifar10_vit_dup_0_05.sh  cifar10_vit_dup_0_1.sh
image_classification_cifar10/run/batch_shuffle/: cifar10_gold_resnet.sh  cifar10_gold_resnet_red90.sh  cifar10_random_resnet.sh  cifar10_random_resnet_red90.sh
image_classification_cifar10/run/train_val_split/: cifar10_90_gold_resnet.sh  cifar10_gold_resnet.sh  cifar10_gold_resnet_red90.sh  cifar10_random_resnet.sh  cifar10_random_resnet_red90.sh
image_segmentation_pascal_voc/: README.md  data.py  model.py  unit_tests.py  utils.py  voc_experiment.py
image_segmentation_pascal_voc/config/: config.yaml
image_segmentation_pascal_voc/run/: pascal_voc_deeplab.sh  pascal_voc_fpn.sh  pascal_voc_gold_50_deeplab.sh  pascal_voc_gold_90_deeplab.sh  pascal_voc_random_50_deeplab.sh  pascal_voc_random_deeplab.sh
image_segmentation_pascal_voc/run/batch_shuffle/: pascal_voc_gold_deeplab.sh  pascal_voc_gold_deeplab_red90.sh  pascal_voc_random_deeplab.sh  pascal_voc_random_deeplab_red90.sh
image_segmentation_pascal_voc/run/train_val_split/: pascal_voc_gold_deeplab.sh  pascal_voc_random_90_deeplab.sh
results/: FIGHTING_RANDOM_SPLIT_CURCE.md  FIGHTING_RANDOM_SPLIT_CURSE.md  RANDOM_SPLIT_CURSE.md  random_batching_report.ipynb  random_split_report.ipynb
text_classification_imdb/: README.md  data.py  imdb_experiment.py  model.py  test_unit.py  utils.py
text_classification_imdb/config/: config.yaml
text_classification_imdb/run/: imdb_bert.sh  imdb_bert_gold_red90.sh  imdb_bert_gold_red98.sh  imdb_bert_random.sh  imdb_bert_random_red98.sh  imdb_cnn.sh
text_classification_imdb/run/batch_shuffle/: imdb_gold_bert.sh  imdb_gold_bert_red90.sh  imdb_random_bert.sh  imdb_random_bert_red90.sh
text_classification_imdb/run/train_val_split/: imdb_bert_gold.sh  imdb_bert_random_red90.sh
utils/: clustering.py
